--- a/css/partials/_font.scss
+++ b/css/partials/_font.scss
@@ -1,4 +1,3 @@
-
 $font-Orbitron: Orbitron, sans-serif;
 $font-Aldrich: Aldrich, sans-serif;
 $font-Inter: Inter, sans-serif;
@@ -6,3 +5,25 @@ $font-Spartan: League Spartan, sans-serif;
 $font-MuseoModerno: MuseoModerno, cursive;
 $font-Rajdhani: Rajdhani, sans-serif;
 $font-Roboto: Roboto, sans-serif;
+
+@mixin font-style-1 {
+    font: {
+        family: $font-Orbitron;
+        size: 40px;
+        weight: 700;
+    }
+    line-height: 50px;
+    letter-spacing: 0;
+    text-align: left;
+    color: $white;
+}
+
+@mixin font-style-2{
+    font-family: $font-Orbitron;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 33px;
+        letter-spacing: 0;
+        text-align: left;
+        color: $white;
+}
