--- a/css/partials/_buttons.scss
+++ b/css/partials/_buttons.scss
@@ -10,7 +10,7 @@
     line-height: 26px;
     letter-spacing: 0em;
     text-align: center;
-    color: #ffffff;
+    color: $white;
     border: 2.41px solid transparent;
     border-image-source: linear-gradient(272.52deg,
             #ffa6fa 47.49%,
