--- a/css/subscribe.scss
+++ b/css/subscribe.scss
@@ -15,13 +15,7 @@
     padding-left: 60px;
 
     &__title {
-      font-family: $font-Orbitron;
-      font-size: 40px;
-      font-weight: 700;
-      line-height: 50px;
-      letter-spacing: 0;
-      text-align: left;
-      color: #ffffff;
+      @include font-style-1;
     }
 
     &__text {
@@ -31,12 +25,12 @@
       line-height: 24px;
       letter-spacing: 0;
       text-align: left;
-      color: #ffffff;
+      color: $white;
       word-wrap: break-word;
     }
 
     &__form__input {
-      color: #474a57;
+      color: $dark-grey;
       font-family: $font-Inter;
       font-size: 16px;
       font-weight: 400;
@@ -61,19 +55,16 @@
         image-width: 2.41px;
         image-outset: 0;
       }
-
       cursor: pointer;
-
       font: {
         family: $font-Inter;
         size: 16px;
         weight: 500;
       }
-
       line-height: 19px;
       letter-spacing: 0;
       text-align: center;
-      color: #ffffff;
+      color: $white;
       background: linear-gradient(92.23deg,
         #ff56f6 21.43%,
         #b936ee 50.63%,
