--- a/css/header.scss
+++ b/css/header.scss
@@ -14,7 +14,7 @@
     font-size: 20px;
     font-weight: 700;
     line-height: 25px;
-    letter-spacing: 0em;
+    letter-spacing: 0;
     text-align: left;
     color: $white;
   }
@@ -46,7 +46,7 @@
     font-size: 20px;
     font-weight: 700;
     line-height: 25px;
-    letter-spacing: 0em;
+    letter-spacing: 0;
     text-align: left;
     color: $grey;
     padding: 11.05px;
@@ -73,7 +73,7 @@
       font-size: 66px;
       font-weight: 600;
       line-height: 91px;
-      letter-spacing: 0em;
+      letter-spacing: 0;
       text-align: left;
       color: $white;
       width: 848px;
@@ -95,7 +95,7 @@
       font-size: 26px;
       font-weight: 400;
       line-height: 44px;
-      letter-spacing: 0em;
+      letter-spacing: 0;
       text-align: left;
       color: $white;
       width: 657.75px;
@@ -111,7 +111,7 @@
       font-size: 20px;
       font-weight: 700;
       line-height: 25px;
-      letter-spacing: 0em;
+      letter-spacing: 0;
       text-align: left;
       background: linear-gradient(89.89deg, #42a6e3 2.33%, #ff56f6 101.4%);
       background-clip: text;
