--- a/css/partials/_buttons.scss
+++ b/css/partials/_buttons.scss
@@ -8,7 +8,7 @@
     font-size: 20px;
     font-weight: 600;
     line-height: 26px;
-    letter-spacing: 0em;
+    letter-spacing: 0;
     text-align: center;
     color: $white;
     border: 2.41px solid transparent;
